added and styled logo and nav bar

--- a/index.html
+++ b/index.html
@@ -15,5 +15,22 @@
 </head>
 <body>
 
+<header class="header">
+
+    <div class="container"><a href="index.html" class="logo">BestShop</a>
+
+        <nav class="page-nav">
+            <ul class="page-nav__list">
+                <li class="page-nav__list-item"><a href="">Why us</a></li>
+                <li class="page-nav__list-item"><a href="">Benefits</a></li>
+                <li class="page-nav__list-item"><a href="">Prices</a></li>
+                <li class="page-nav__list-item"><a href="">Contact</a></li>
+            </ul>
+        </nav>
+
+    </div>
+
+</header>
+
 </body>
 </html>
