added and styled landing page

--- a/index.html
+++ b/index.html
@@ -32,5 +32,17 @@
 
 </header>
 
+<main>
+
+    <section class="landing-page">
+        <div class="container">
+            <h1 class="landing-page__title">Sell More!</h1>
+            <p class="landing-page__text">Open shop on our platform and increase your sales</p>
+            <a href="" class="button button__main-theme button__cta-button">Open your shop</a></div>
+    </section>
+
+
+</main>
+
 </body>
 </html>
