--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>BestShop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 
@@ -17,16 +18,19 @@
 
 <header class="header">
 
-    <div class="container"><a href="index.html" class="logo">BestShop</a>
+    <div class="container">
+        <div class="wrapper">
+        <a href="index.html" class="logo">BestShop</a>
 
-        <nav class="page-nav">
-            <ul class="page-nav__list">
-                <li class="page-nav__list-item"><a href="">Why us</a></li>
-                <li class="page-nav__list-item"><a href="">Benefits</a></li>
-                <li class="page-nav__list-item"><a href="">Prices</a></li>
-                <li class="page-nav__list-item"><a href="">Contact</a></li>
-            </ul>
-        </nav>
+            <nav class="page-nav">
+                <ul class="page-nav__list">
+                    <li class="page-nav__list-item"><a href="#why-us">Why us</a></li>
+                    <li class="page-nav__list-item"><a href="">Benefits</a></li>
+                    <li class="page-nav__list-item"><a href="">Prices</a></li>
+                    <li class="page-nav__list-item"><a href="">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
 
     </div>
 
@@ -41,6 +45,33 @@
             <a href="" class="button button__main-theme button__cta-button">Open your shop</a></div>
     </section>
 
+    <section class="why-us" id="why-us">
+        <div class="container">
+
+
+            <h2 class="section-title">The most popular sales platform in country</h2>
+
+            <div class="wrapper">
+                <article class="why-us__article"><div
+                        class="why-us__img"><img src="./assets/Person.svg" alt="person"></div>
+                    <h3 class="why-us__title">100000+</h3>
+                    <p class="why-us__text">daily entries</p>
+                </article>
+
+                <article class="why-us__article"><div class="why-us__img"><img src="./assets/Eye.svg" alt="eye"></div>
+                    <h3 class="why-us__title">2000000+</h3>
+                    <p class="why-us__text">seen products every day</p>
+                </article>
+
+                <article class="why-us__article"><div
+                        class="why-us__img"><img src="./assets/Catalog.svg" alt="catalogs"></div>
+                    <h3 class="why-us__title">10000+</h3>
+                    <p class="why-us__text">added posts daily</p>
+                </article>
+            </div>
+
+        </div>
+    </section>
 
 </main>
 
