"benefits" section completed

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     <div class="container">
         <div class="wrapper">
-        <a href="index.html" class="logo">BestShop</a>
+            <a href="index.html" class="logo">BestShop</a>
 
             <nav class="page-nav">
                 <ul class="page-nav__list">
                     <li class="page-nav__list-item"><a href="#why-us">Why us</a></li>
-                    <li class="page-nav__list-item"><a href="">Benefits</a></li>
+                    <li class="page-nav__list-item"><a href="#benefits">Benefits</a></li>
                     <li class="page-nav__list-item"><a href="">Prices</a></li>
                     <li class="page-nav__list-item"><a href="">Contact</a></li>
                 </ul>
@@ -52,19 +52,22 @@
             <h2 class="section-title">The most popular sales platform in country</h2>
 
             <div class="wrapper">
-                <article class="why-us__article"><div
-                        class="why-us__img"><img src="./assets/Person.svg" alt="person"></div>
+                <article class="why-us__article">
+                    <div
+                            class="why-us__img"><img src="./assets/Person.svg" alt="person"></div>
                     <h3 class="why-us__title">100000+</h3>
                     <p class="why-us__text">daily entries</p>
                 </article>
 
-                <article class="why-us__article"><div class="why-us__img"><img src="./assets/Eye.svg" alt="eye"></div>
+                <article class="why-us__article">
+                    <div class="why-us__img"><img src="./assets/Eye.svg" alt="eye"></div>
                     <h3 class="why-us__title">2000000+</h3>
                     <p class="why-us__text">seen products every day</p>
                 </article>
 
-                <article class="why-us__article"><div
-                        class="why-us__img"><img src="./assets/Catalog.svg" alt="catalogs"></div>
+                <article class="why-us__article">
+                    <div
+                            class="why-us__img"><img src="./assets/Catalog.svg" alt="catalogs"></div>
                     <h3 class="why-us__title">10000+</h3>
                     <p class="why-us__text">added posts daily</p>
                 </article>
@@ -73,6 +76,46 @@
         </div>
     </section>
 
+    <section class="benefits" id="benefits">
+
+        <div class="container">
+
+            <div class="wrapper benefits--border">
+
+                <article class="benefits__article">
+                    <h2 class="section-title">Be always first</h2>
+                    <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                </article>
+                <div class="benefits__img"><img src="./assets/Macbook.png" alt="macbook"></div>
+            </div>
+
+            <div class="wrapper benefits--border">
+                <div class="benefits__img"><img src="./assets/iPhone.png" alt="iphone"></div>
+                <article class="benefits__article">
+                    <h2 class="section-title">Your shop is where you&nbsp;are!</h2>
+                    <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                </article>
+
+            </div>
+
+            <div class="benefits--trumpet-wrapper">
+
+                <div class="wrapper benefits--border">
+                    <article class="benefits__article">
+                        <h2 class="section-title">Increase recognition your brand!</h2>
+                        <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    </article>
+                </div>
+
+                <div class="benefits__trumpet-img benefits--border"><img src="./assets/Trumpet.png" alt=""></div>
+            </div>
+
+        </div>
+
+    </section>
 </main>
 
 </body>
