"offers" section completed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul class="page-nav__list">
                     <li class="page-nav__list-item"><a href="#why-us">Why us</a></li>
                     <li class="page-nav__list-item"><a href="#benefits">Benefits</a></li>
-                    <li class="page-nav__list-item"><a href="">Prices</a></li>
+                    <li class="page-nav__list-item"><a href="#prices">Prices</a></li>
                     <li class="page-nav__list-item"><a href="">Contact</a></li>
                 </ul>
             </nav>
@@ -46,8 +46,8 @@
     </section>
 
     <section class="why-us" id="why-us">
-        <div class="container">
 
+        <div class="container">
 
             <h2 class="section-title">The most popular sales platform in country</h2>
 
@@ -116,6 +116,60 @@
         </div>
 
     </section>
+
+    <section class="prices" id="prices">
+        <div class="container">
+
+            <h2 class="section-title">Prices</h2>
+            <div class="wrapper">
+
+                <div class="offer">
+                    <h3 class="offer__name">Basic</h3>
+                    <p class="offer__price">$0</p>
+
+                    <ul class="offer__list">
+                        <li class="offer__list-item offer__list-item--ok">100 MB HDD</li>
+                        <li class="offer__list-item offer__list-item--ok">1 Subdomain</li>
+                        <li class="offer__list-item offer__list-item--ok">2 E-mails</li>
+                        <li class="offer__list-item offer__list-item--not">Two years license</li>
+                        <li class="offer__list-item offer__list-item--not">Full support</li>
+                    </ul>
+
+                    <a href="" class="button offer__button">Begin</a></div>
+
+                <div class="offer">
+                    <h3 class="offer__name">Professional</h3>
+                    <p class="offer__price">$25</p>
+                    <p class="offer--small-text">Limited offer</p>
+
+                    <ul class="offer__list">
+                        <li class="offer__list-item offer__list-item--ok">500 MB HDD</li>
+                        <li class="offer__list-item offer__list-item--ok">2 Subdomains</li>
+                        <li class="offer__list-item offer__list-item--ok">5 E-mails</li>
+                        <li class="offer__list-item offer__list-item--ok">One year license</li>
+                        <li class="offer__list-item offer__list-item--not">Full support</li>
+                    </ul>
+
+                    <a href="" class="button offer__button">Begin</a></div>
+
+                <div class="offer">
+                    <h3 class="offer__name">Premium</h3>
+                    <p class="offer__price">$60</p>
+                    <h4 class="offer--small-text">Limited offer</h4>
+
+                    <ul class="offer__list">
+                        <li class="offer__list-item offer__list-item--ok">2 GB HDD</li>
+                        <li class="offer__list-item offer__list-item--ok">5 Subdomains</li>
+                        <li class="offer__list-item offer__list-item--ok">20 E-mails</li>
+                        <li class="offer__list-item offer__list-item--ok">Two years license</li>
+                        <li class="offer__list-item offer__list-item--ok">Full support</li>
+                    </ul>
+
+                    <a href="" class="button offer__button">Begin</a></div>
+            </div>
+        </div>
+    </section>
+
 </main>
 
 </body>
