"contact" section completed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="page-nav__list-item"><a href="#why-us">Why us</a></li>
                     <li class="page-nav__list-item"><a href="#benefits">Benefits</a></li>
                     <li class="page-nav__list-item"><a href="#prices">Prices</a></li>
-                    <li class="page-nav__list-item"><a href="">Contact</a></li>
+                    <li class="page-nav__list-item"><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,10 +39,17 @@
 <main>
 
     <section class="landing-page">
+
         <div class="container">
+
             <h1 class="landing-page__title">Sell More!</h1>
+
             <p class="landing-page__text">Open shop on our platform and increase your sales</p>
-            <a href="" class="button button__main-theme button__cta-button">Open your shop</a></div>
+
+            <a href="" class="button button__main-theme button__cta-button">Open your shop</a>
+
+        </div>
+
     </section>
 
     <section class="why-us" id="why-us">
@@ -52,6 +59,7 @@
             <h2 class="section-title">The most popular sales platform in country</h2>
 
             <div class="wrapper">
+
                 <article class="why-us__article">
                     <div
                             class="why-us__img"><img src="./assets/Person.svg" alt="person"></div>
@@ -71,9 +79,11 @@
                     <h3 class="why-us__title">10000+</h3>
                     <p class="why-us__text">added posts daily</p>
                 </article>
+
             </div>
 
         </div>
+
     </section>
 
     <section class="benefits" id="benefits">
@@ -83,19 +93,31 @@
             <div class="wrapper benefits--border">
 
                 <article class="benefits__article">
+
                     <h2 class="section-title">Be always first</h2>
                     <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+
                 </article>
-                <div class="benefits__img"><img src="./assets/Macbook.png" alt="macbook"></div>
+
+                <div class="benefits__img">
+                    <img src="./assets/Macbook.png" alt="macbook">
+                </div>
+
             </div>
 
             <div class="wrapper benefits--border">
-                <div class="benefits__img"><img src="./assets/iPhone.png" alt="iphone"></div>
+
+                <div class="benefits__img">
+                    <img src="./assets/iPhone.png" alt="iphone">
+                </div>
+
                 <article class="benefits__article">
+
                     <h2 class="section-title">Your shop is where you&nbsp;are!</h2>
                     <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+
                 </article>
 
             </div>
@@ -103,14 +125,19 @@
             <div class="benefits--trumpet-wrapper">
 
                 <div class="wrapper benefits--border">
+
                     <article class="benefits__article">
+
                         <h2 class="section-title">Increase recognition your brand!</h2>
                         <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+
                     </article>
+
                 </div>
 
-                <div class="benefits__trumpet-img benefits--border"><img src="./assets/Trumpet.png" alt=""></div>
+                <div class="benefits__trumpet-img benefits--border">
+                    <img src="./assets/Trumpet.png" alt=""></div>
             </div>
 
         </div>
@@ -118,56 +145,122 @@
     </section>
 
     <section class="prices" id="prices">
+
         <div class="container">
 
             <h2 class="section-title">Prices</h2>
+
             <div class="wrapper">
 
                 <div class="offer">
+
                     <h3 class="offer__name">Basic</h3>
+
                     <p class="offer__price">$0</p>
 
                     <ul class="offer__list">
+
                         <li class="offer__list-item offer__list-item--ok">100 MB HDD</li>
                         <li class="offer__list-item offer__list-item--ok">1 Subdomain</li>
                         <li class="offer__list-item offer__list-item--ok">2 E-mails</li>
                         <li class="offer__list-item offer__list-item--not">Two years license</li>
                         <li class="offer__list-item offer__list-item--not">Full support</li>
+
                     </ul>
 
-                    <a href="" class="button offer__button">Begin</a></div>
+                    <a href="" class="button offer__button">Begin</a>
+
+                </div>
 
                 <div class="offer">
+
                     <h3 class="offer__name">Professional</h3>
+
                     <p class="offer__price">$25</p>
+
                     <p class="offer--small-text">Limited offer</p>
 
                     <ul class="offer__list">
+
                         <li class="offer__list-item offer__list-item--ok">500 MB HDD</li>
                         <li class="offer__list-item offer__list-item--ok">2 Subdomains</li>
                         <li class="offer__list-item offer__list-item--ok">5 E-mails</li>
                         <li class="offer__list-item offer__list-item--ok">One year license</li>
                         <li class="offer__list-item offer__list-item--not">Full support</li>
+
                     </ul>
 
-                    <a href="" class="button offer__button">Begin</a></div>
+                    <a href="" class="button offer__button">Begin</a>
+
+                </div>
 
                 <div class="offer">
+
                     <h3 class="offer__name">Premium</h3>
+
                     <p class="offer__price">$60</p>
-                    <h4 class="offer--small-text">Limited offer</h4>
+
+                    <p class="offer--small-text">Limited offer</p>
 
                     <ul class="offer__list">
+
                         <li class="offer__list-item offer__list-item--ok">2 GB HDD</li>
                         <li class="offer__list-item offer__list-item--ok">5 Subdomains</li>
                         <li class="offer__list-item offer__list-item--ok">20 E-mails</li>
                         <li class="offer__list-item offer__list-item--ok">Two years license</li>
                         <li class="offer__list-item offer__list-item--ok">Full support</li>
+
                     </ul>
 
-                    <a href="" class="button offer__button">Begin</a></div>
+                    <a href="" class="button offer__button">Begin</a>
+
+                </div>
+
             </div>
+
         </div>
+
+    </section>
+
+    <section class="contact" id="contact">
+
+        <div class="container">
+
+            <div class="wrapper">
+
+                <article class="contact__info">
+
+                    <h2 class="contact__title">Any questions?</h2>
+
+                    <p class="contact__text">Leave your email address or call us!</p>
+
+                    <a href="mailto:info@bestshop.xyz"
+                       class="contact__email-link contact--parameter">info@bestshop.xyz</a>
+
+                    <span class="contact__tel-number contact--parameter">123 456 789</span>
+
+                </article>
+
+                <form action="" class="contact__form">
+
+                    <label for="name" class="contact__input--label">Name</label>
+                    <input type="text" name="name" id="name" class="contact__input">
+
+                    <label for="email" class="contact__input--label">Email</label>
+                    <input type="email" name="email" id="email" class="contact__input">
+
+                    <input type="checkbox" name="consent" id="consent" class="contact--not-checkbox">
+                    <label for="consent" class="contact__consent"><span class="contact--checkbox"></span>I hereby give
+                        consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</label>
+
+                    <button type="submit" class="button button__main-theme contact__button">Send</button>
+
+                </form>
+
+            </div>
+
+        </div>
+
     </section>
 
 </main>
