"footer" section completed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="container">
         <div class="wrapper">
-            <a href="index.html" class="logo">BestShop</a>
+            <a href="index.html" class="header__logo">BestShop</a>
 
             <nav class="page-nav">
                 <ul class="page-nav__list">
@@ -168,7 +168,7 @@
 
                     </ul>
 
-                    <a href="" class="button offer__button">Begin</a>
+                    <a href="#" class="button offer__button">Begin</a>
 
                 </div>
 
@@ -190,7 +190,7 @@
 
                     </ul>
 
-                    <a href="" class="button offer__button">Begin</a>
+                    <a href="#" class="button offer__button">Begin</a>
 
                 </div>
 
@@ -212,7 +212,7 @@
 
                     </ul>
 
-                    <a href="" class="button offer__button">Begin</a>
+                    <a href="#" class="button offer__button">Begin</a>
 
                 </div>
 
@@ -250,8 +250,7 @@
                     <input type="email" name="email" id="email" class="contact__input">
 
                     <input type="checkbox" name="consent" id="consent" class="contact--not-checkbox">
-                    <label for="consent" class="contact__consent"><span class="contact--checkbox"></span>I hereby give
-                        consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</label>
+                    <label for="consent" class="contact__consent"><span class="contact--checkbox"></span>I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</label>
 
                     <button type="submit" class="button button__main-theme contact__button">Send</button>
 
@@ -264,6 +263,32 @@
     </section>
 
 </main>
+
+<footer class="footer">
+
+    <div class="container">
+
+        <div class="wrapper">
+
+            <div class="footer__logo">
+
+                <a href="index.html" class="footer__logo--link">BestShop</a>
+                <p class="copyright">© 2019 BestShop LTD, All Rights Reserved</p>
+
+            </div>
+
+            <div class="footer__social-links">
+
+                <a href="#"><img src="./assets/Twitter.svg" alt="twitter icon"></a>
+                <a href="#"><img src="./assets/Facebook.svg" alt="facebook icon"></a>
+
+            </div>
+
+        </div>
+
+    </div>
+
+</footer>
 
 </body>
 </html>
