--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <p class="landing-page__text">Open shop on our platform and increase your sales</p>
 
             <a href="" class="button button__main-theme button__cta-button">Open your shop</a>
+            
+            <div class="landing-page__img"><img src="./assets/Background.png" alt=""></div>
 
         </div>
 
@@ -233,11 +235,14 @@
                     <h2 class="contact__title">Any questions?</h2>
 
                     <p class="contact__text">Leave your email address or call us!</p>
+                    <div class="contact__info--directions">
 
-                    <a href="mailto:info@bestshop.xyz"
-                       class="contact__email-link contact--parameter">info@bestshop.xyz</a>
+                        <a href="mailto:info@bestshop.xyz"
+                           class="contact__email-link contact--parameter">info@bestshop.xyz</a>
 
-                    <span class="contact__tel-number contact--parameter">123 456 789</span>
+                        <span class="contact__tel-number contact--parameter">123 456 789</span>
+
+                    </div>
 
                 </article>
 
@@ -250,7 +255,12 @@
                     <input type="email" name="email" id="email" class="contact__input">
 
                     <input type="checkbox" name="consent" id="consent" class="contact--not-checkbox">
-                    <label for="consent" class="contact__consent"><span class="contact--checkbox"></span>I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</label>
+                    <label for="consent" class="contact__consent"><span class="contact--checkbox"></span>I hereby give
+                        consent for my personal data included in my application to be processed for the purposes of the
+                        recruitment process under the European Parliament’s and Council of the European Union Regulation
+                        on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of
+                        personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data
+                        Protection Directive)</label>
 
                     <button type="submit" class="button button__main-theme contact__button">Send</button>
 
